Improve MathML style a bit and make it look similar to code Ensure overflow scrolling works

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -599,19 +599,34 @@ body.error {
 /* Math */
 
 math {
+	font-family: math;
+	font-size: 16pt;
+
+	annotation {
+		display: none;
+	}
+
+	mrow {
+		cursor: text;
+	}
+}
+
+.math {
 	background-color: var(--code-background);
 	border-color: var(--outline);
 	border-style: solid;
 	border-width: 1px;
-	font-family: math;
+}
 
-	&[display="block"] {
-		padding: 8px;
-	}
+.math.block {
+	display: block;
+	overflow: auto;
+	padding: 8px;
+	scrollbar-width: thin;
+}
 
-	&:not([display="block"]) {
-		padding: 1px 3px 1px 3px;
-	}
+.math.inline {
+	padding: 1px 3px;
 }
 
 /* ---------------------------------------------------------------------------------------------- */
